--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
+---
+layout: frontpage
+title: Kød og Blod - en teaterkoncert over Sanne Salomonsens musik
+---
+
 Kød og Blod - en teaterkoncert over Sanne Salomonsens musik
