Head in includes

--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: frontpage
 title: Kød og Blod - en teaterkoncert over Sanne Salomonsens musik
 ---
 
-Kød og Blod - en teaterkoncert over Sanne Salomonsens musik
+<h1>Kød og Blod - en teaterkoncert over Sanne Salomonsens musik</h1>
