--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@ layout: frontpage
 title: Kød og Blod - en teaterkoncert over Sanne Salomonsens musik
 ---
 
-<h1>Kød og Blod - en teaterkoncert over Sanne Salomonsens musik</h1>
+<h1><a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/">Køb billet til Kød og Blod - en teaterkoncert over Sanne Salomonsens musik</a></h1>
+
+<img src="assets/images/frontpage.jpeg" alt="Kød og Blod">
