--- a/404.html
+++ b/404.html
@@ -3,6 +3,4 @@ layout: frontpage
 title: Kød og Blod - en teaterkoncert over Sanne Salomonsens musik
 ---
 
-<h1><a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/">Køb billet til Kød og Blod - en teaterkoncert over Sanne Salomonsens musik</a></h1>
-
-<img src="assets/images/frontpage.jpeg" alt="Kød og Blod">
+{% include frontpage.html %}
