--- a/tak/index.html
+++ b/tak/index.html
@@ -3,4 +3,4 @@ layout: frontpage
 title: Kød og Blod - en teaterkoncert over Sanne Salomonsens musik
 ---
 
-<iframe src="https://docs.google.com/forms/d/1orCae1l5XOzaFMwXrekB6SX3rqYnAqfewRtWR3x3cdk/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/1orCae1l5XOzaFMwXrekB6SX3rqYnAqfewRtWR3x3cdk/viewform?embedded=true&hl=dk" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
