--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: frontpage
-title: Kød og Blod - en teaterkoncert over Sanne Salomonsens musik
+title: Kød og Blod - Teaterkoncert over Sanne Salomonsens Musik
 ---
 
 {% include frontpage.html %}
