Update press page

--- a/presse/index.html
+++ b/presse/index.html
@@ -1,1 +1,11 @@
-Her kommer der en pressemeddellelse
+---
+layout: frontpage
+title: Presse - Kød og Blod
+---
+
+<h2>Beskrivelse af forestillingen</h2>
+
+<p>
+  Sex og kærlighed. Kødet og blodet. Hvis man sælger sig selv, kan man da holde de to ting adskilte? Teaterkoncerten "Kød og blod" fortæller, igennem Sanne Salomonsens sange, historien om glædespigerne på et bordel. De nyder deres job, når tankerne er slået fra, men nogle gange melder følelserne sig. Pigerne forsøger at glemme, men kan ikke. Igennem forskellige billeder vil instruktøren Patrick Sindlev Gøtterup skabe en fortælling om bagsiden af medaljen, når man sælger sig selv. Han suppleres af koreografen Rie Simonsen, der med sit moderne præg sætter sensualiteten i højsædet, og musikalsk leder Anders Thermansen, der sætter Sannes musik i en rå og barsk, men følelsesfuld kontekst.
+</p>
+
