Custom Facebook images

--- a/presse/index.html
+++ b/presse/index.html
@@ -1,6 +1,7 @@
 ---
 layout: frontpage
 title: Presse - Kød og Blod
+facebook_image: http://xn--kdogblod-54a.dk/assets/images/square_poster.png
 ---
 
 <h2>Beskrivelse af forestillingen</h2>
