--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: frontpage
 title: Kød og Blod - Teaterkoncert over Sanne Salomonsens Musik
+facebook_image: http://xn--kdogblod-54a.dk/assets/images/square_poster.png
 ---
 
 {% include frontpage.html %}
