--- a/tak/index.html
+++ b/tak/index.html
@@ -1,6 +1,7 @@
 ---
 layout: thank_you
 title: Tak for besøget
+facebook_image: http://xn--kdogblod-54a.dk/assets/images/square_poster.png
 ---
 
 <iframe src="https://docs.google.com/forms/d/1orCae1l5XOzaFMwXrekB6SX3rqYnAqfewRtWR3x3cdk/viewform?embedded=true&hl=dk" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
