--- a/anbefal/index.html
+++ b/anbefal/index.html
@@ -1,7 +1,7 @@
 ---
 layout: frontpage
 title: Kød og Blod - Teaterkoncert over Sanne Salomonsens Musik
-facebook_image: http://xn--kdogblod-54a.dk/assets/images/klub/fald.jpg
+facebook_image: http://xn--kdogblod-54a.dk/assets/images/fotoklub/small/bent-1.jpeg
 ---
 
 {% include frontpage.html %}
