New layout on presse

--- a/presse/index.html
+++ b/presse/index.html
@@ -4,58 +4,68 @@ title: Presse - Kød og Blod
 facebook_image: http://xn--kdogblod-54a.dk/assets/images/square_poster.png
 ---
 
-<h2>Kød og Blod - Teaterkoncert Over Sanne Salomonsens Musik</h2>
-
-<p>Herlev Revy og Teater sætter i år teaterkoncerten "Kød og Blod" op i Herlev Teaterbio. Kød og Blod er en teaterkoncert over Sanne Salomonsens musik.</p>
-
-<h3>Beskrivelse af teaterkoncerten Kød og Blod:</h3>
-<p>Sex og kærlighed. Kødet og blodet. Hvis man sælger sig selv, kan man da holde de to ting adskilte? Teaterkoncerten "Kød og Blod" fortæller, igennem Sanne Salomonsens sange, historien om glædespigerne på et bordel. De nyder deres job, når tankerne er slået fra, men nogle gange melder følelserne sig. Pigerne forsøger at glemme, men kan ikke. Igennem forskellige billeder vil instruktøren Patrick Sindlev Gøtterup skabe en fortælling om bagsiden af medaljen, når man sælger sig selv. Han suppleres af koreografen Rie Simonsen, der med sit moderne præg sætter sensualiteten i højsædet, og musikalsk leder Anders Termansen, der sætter Sannes musik i en rå og barsk, men følelsesfuld kontekst.</p>
-
-<h3>Teatret:</h3>
-<p>Efter flere år med successer med forestillinger som RENT, Jesus Christ Superstar og Aida, som alle er "stangvarer", har foreningen i år truffet det modige valg, selv at lave alt fra idé og koncept til fortolkning af musik.</p>
-<p>Det tør de, pga. det utroligt stærke hold vi over årene har fået samlet omkring foreningen. Derudover gør vores tidligere forestillingers kvalitet, at vi kan tiltrække store talenter til vores auditions. På den måde, kan vi sikre kvaliteten både på og bag scenen.</p>
-
-<h3>Billetter:</h3>
-<p>Billetter kan købes på billetlugen.dk: <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/">http://www.billetlugen.dk/teater/27059/koed-og-blod/</a></p>
-
-<p>Pris: 120,-</p>
-
-<h3>Forestillingen spiller:</h3>
-<ul>
-  <li>Lørdag d. 25/05/13 kl. 20:00</li>
-  <li>Søndag d. 26/05/13 kl. 17:00</li>
-  <li>Mandag d. 27/05/13 kl. 20:00</li>
-  <li>Tirsdag d. 28/05/13 kl. 20:00</li>
-  <li>Onsdag d. 29/05/13 kl. 20:00</li>
-  <li>Torsdag d. 30/05/13 kl. 20:00</li>
-  <li>Fredag d. 31/05/13 kl. 20:00</li>
-  <li>Lørdag d. 01/06/13 kl. 14:00</li>
-  <li>Lørdag d. 01/06/13 kl. 17:30</li>
-</ul>
+<div class="row">
+  <div class="span7">
+    <h2>Kød og Blod - Teaterkoncert over<br>Sanne Salomonsens Musik</h2>
+  </div>
+</div>
 
 
-<h3>Presseansvarlig:</h3>
-<p>Anders Lemke <br>
-Telefon: 20442127 <br>
-Mail: al@herlevrevyogteater.dk</p>
+<div class="row">
+  <div class="span5">
+    <p>Herlev Revy og Teater sætter i år teaterkoncerten "Kød og Blod" op i Herlev Teaterbio. Kød og Blod er en teaterkoncert over Sanne Salomonsens musik.</p>
+    <h3>Beskrivelse</h3>
+    <p>Sex og kærlighed. Kødet og blodet. Hvis man sælger sig selv, kan man da holde de to ting adskilte? Teaterkoncerten "Kød og Blod" fortæller, igennem Sanne Salomonsens sange, historien om glædespigerne på et bordel. De nyder deres job, når tankerne er slået fra, men nogle gange melder følelserne sig. Pigerne forsøger at glemme, men kan ikke. Igennem forskellige billeder vil instruktøren Patrick Sindlev Gøtterup skabe en fortælling om bagsiden af medaljen, når man sælger sig selv. Han suppleres af koreografen Rie Simonsen, der med sit moderne præg sætter sensualiteten i højsædet, og musikalsk leder Anders Termansen, der sætter Sannes musik i en rå og barsk, men følelsesfuld kontekst.</p>
 
-<h3>Billeder</h3>
+    <h3>Teatret</h3>
+    <p>Efter flere år med successer med forestillinger som RENT, Jesus Christ Superstar og Aida, som alle er "stangvarer", har foreningen i år truffet det modige valg, selv at lave alt fra idé og koncept til fortolkning af musik.</p>
+    <p>Det tør de, pga. det utroligt stærke hold vi over årene har fået samlet omkring foreningen. Derudover gør vores tidligere forestillingers kvalitet, at vi kan tiltrække store talenter til vores auditions. På den måde, kan vi sikre kvaliteten både på og bag scenen.</p>
 
-<a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3333.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3333.jpg" alt=""></a>
-<a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3180.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3180.jpg" alt=""></a>
-<a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3243.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3243.jpg" alt=""></a>
-<a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3213.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3213.jpg" alt=""></a>
-<a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3220.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3220.jpg" alt=""></a>
-<a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3310.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3310.jpg" alt=""></a>
-<a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3353.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3353.jpg" alt=""></a>
-<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3248.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3248.jpg" alt=""></a> -->
+    <h3>Billetter</h3>
+    <p>Billetter kan købes på billetlugen.dk: <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/">http://www.billetlugen.dk/teater/27059/koed-og-blod/</a></p>
 
-<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3325.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3325.jpg" alt=""></a> -->
-<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3338.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3338.jpg" alt=""></a> -->
-<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3343.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3343.jpg" alt=""></a> -->
+    <p>Pris: 120,-</p>
 
-<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3356.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3356.jpg" alt=""></a> -->
-<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3358.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3358.jpg" alt=""></a> -->
-<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3360.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3360.jpg" alt=""></a> -->
-<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3365.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3365.jpg" alt=""></a> -->
-<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3373.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3373.jpg" alt=""></a> -->
+    <h3>Forestillingen spiller</h3>
+    <ul>
+      <li>Lørdag d. 25/05/13 kl. 20:00</li>
+      <li>Søndag d. 26/05/13 kl. 17:00</li>
+      <li>Mandag d. 27/05/13 kl. 20:00</li>
+      <li>Tirsdag d. 28/05/13 kl. 20:00</li>
+      <li>Onsdag d. 29/05/13 kl. 20:00</li>
+      <li>Torsdag d. 30/05/13 kl. 20:00</li>
+      <li>Fredag d. 31/05/13 kl. 20:00</li>
+      <li>Lørdag d. 01/06/13 kl. 14:00</li>
+      <li>Lørdag d. 01/06/13 kl. 17:30</li>
+    </ul>
+
+
+    <h3>Presseansvarlig</h3>
+    <p>Anders Lemke <br>
+    Telefon: 20442127 <br>
+    Mail: al@herlevrevyogteater.dk</p>
+  </div>
+  <div class="span6 offset1">
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3333.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3333.jpg" alt=""></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3180.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3180.jpg" alt=""></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3243.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3243.jpg" alt=""></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3213.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3213.jpg" alt=""></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3220.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3220.jpg" alt=""></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3310.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3310.jpg" alt=""></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3353.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3353.jpg" alt=""></a>
+    <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3248.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3248.jpg" alt=""></a> -->
+
+    <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3325.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3325.jpg" alt=""></a> -->
+    <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3338.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3338.jpg" alt=""></a> -->
+    <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3343.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3343.jpg" alt=""></a> -->
+
+    <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3356.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3356.jpg" alt=""></a> -->
+    <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3358.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3358.jpg" alt=""></a> -->
+    <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3360.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3360.jpg" alt=""></a> -->
+    <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3365.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3365.jpg" alt=""></a> -->
+    <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3373.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3373.jpg" alt=""></a> -->
+
+  </div>
+</div>
+
+
