--- a/billeder/index.html
+++ b/billeder/index.html
@@ -18,5 +18,5 @@ facebook_image: http://xn--kdogblod-54a.dk/assets/images/square_poster.png
 <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3356.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3356.jpg" alt=""></a>
 <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3358.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3358.jpg" alt=""></a>
 <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3360.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3360.jpg" alt=""></a>
-<a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3365.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3365.jpg" alt=""></a>
+<!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3365.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3365.jpg" alt=""></a> -->
 <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3373.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3373.jpg" alt=""></a>
