--- a/presse/index.html
+++ b/presse/index.html
@@ -18,7 +18,7 @@ facebook_image: http://xn--kdogblod-54a.dk/assets/images/square_poster.png
     <p>Sex og kærlighed. Kødet og blodet. Hvis man sælger sig selv, kan man da holde de to ting adskilte? Teaterkoncerten "Kød og Blod" fortæller, igennem Sanne Salomonsens sange, historien om glædespigerne på et bordel. De nyder deres job, når tankerne er slået fra, men nogle gange melder følelserne sig. Pigerne forsøger at glemme, men kan ikke. Igennem forskellige billeder vil instruktøren Patrick Sindlev Gøtterup skabe en fortælling om bagsiden af medaljen, når man sælger sig selv. Han suppleres af koreografen Rie Simonsen, der med sit moderne præg sætter sensualiteten i højsædet, og musikalsk leder Anders Termansen, der sætter Sannes musik i en rå og barsk, men følelsesfuld kontekst.</p>
 
     <h3>Teatret</h3>
-    <p>Efter flere år med successer med forestillinger som RENT, Jesus Christ Superstar og Aida, som alle er "stangvarer", har foreningen i år truffet det modige valg, selv at lave alt fra idé og koncept til fortolkning af musik.</p>
+    <p>Efter flere år med successer med etablerede forestillinger som RENT, Jesus Christ Superstar og Aida, har foreningen i år truffet det modige valg, selv at lave alt fra idé og koncept til fortolkning af musik.</p>
     <p>Det tør de, pga. det utroligt stærke hold vi over årene har fået samlet omkring foreningen. Derudover gør vores tidligere forestillingers kvalitet, at vi kan tiltrække store talenter til vores auditions. På den måde, kan vi sikre kvaliteten både på og bag scenen.</p>
 
     <h3>Billetter</h3>
