--- a/presse/index.html
+++ b/presse/index.html
@@ -39,6 +39,12 @@ facebook_image: http://xn--kdogblod-54a.dk/assets/images/square_poster.png
       <li>Lørdag d. 01/06/13 kl. 17:30</li>
     </ul>
 
+    <h3>Sted</h3>
+    <p>
+      Herlev Teaterbio<br>
+      Herlev Bygade 30<br>
+      2730 Herlev
+    </p>
 
     <h3>Presseansvarlig</h3>
     <p>Anders Lemke <br>
