--- a/presse/index.html
+++ b/presse/index.html
@@ -52,13 +52,13 @@ facebook_image: http://xn--kdogblod-54a.dk/assets/images/square_poster.png
     Mail: al@herlevrevyogteater.dk</p>
   </div>
   <div class="span6 offset1">
-    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3333.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3333.jpg" alt=""></a>
-    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3180.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3180.jpg" alt=""></a>
-    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3243.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3243.jpg" alt=""></a>
-    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3213.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3213.jpg" alt=""></a>
-    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3220.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3220.jpg" alt=""></a>
-    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3310.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3310.jpg" alt=""></a>
-    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3353.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3353.jpg" alt=""></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3333.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3333.jpg" alt="Foto: Herlev Fotoklub"></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3180.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3180.jpg" alt="Foto: Herlev Fotoklub"></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3243.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3243.jpg" alt="Foto: Herlev Fotoklub"></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3213.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3213.jpg" alt="Foto: Herlev Fotoklub"></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3220.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3220.jpg" alt="Foto: Herlev Fotoklub"></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3310.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3310.jpg" alt="Foto: Herlev Fotoklub"></a>
+    <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3353.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3353.jpg" alt="Foto: Herlev Fotoklub"></a>
     <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3248.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3248.jpg" alt=""></a> -->
 
     <!-- <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3325.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3325.jpg" alt=""></a> -->
